--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
     <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/4.2.0/normalize.min.css">
 </head>
 <body>
-  <div id="react-root"></div>
+  <div id="react-root">
+    <!-- App -->
+  </div>
   <script src="/build/bundle.js"></script>
 </body>
 </html>
