--- a/client/index.html
+++ b/client/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>ChattyApp</title>
+    <title>LackS</title>
     <link href='https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css' rel='stylesheet' type='text/css'>
     <link href="https://fonts.googleapis.com/css?family=Muli:300,300i" rel="stylesheet" type='text/css'>
 </head>
